--- a/checkpoint3.yaml
+++ b/checkpoint3.yaml
@@ -2,8 +2,37 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: Kati Checkpoint3
 
 Parameters:
+  KatiName:
+    Type: String
+    Default: 'Kati Heikkonen'
   LatestAmiId:
-    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
+    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
+    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
 
 Resources:
+  KatinSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security Group for EC2
+      GroupName: Kati-Instance-SG
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+
+  KatinInstanssi:
+    Type: AWS::EC2::Instance
+    Properties:
+      ImageId: !Ref LatestAmiId
+      InstanceType: t2.nano
+      SecurityGroupIds:
+        - !Ref KatinSecurityGroup
+      Tags:
+        - Key: Owner
+          Value: Kati
+
+Outputs:
+  KatinInstanssiPublicDNSName:
+    Description: The Public DNS name of KatinInstanssi
+    Value: !GetAtt KatinInstanssi.PublicDnsName
